# SmartGroceryAssistant

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Budget.h  DataManager.h  GroceryItem.h  HelpDialog.h  ItemSearchDelete.h
src/: Budget.cpp  DataManager.cpp  HelpDialog.cpp  ItemSearchDelete.cpp
tests/: interactive_main.cpp  test_main.cpp
